--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
     "lz-string": "^1.5.0",
     "next": "15.2.x",
     "next-pwa": "^5.6.0",
