--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
