--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,11 +15,11 @@
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "lz-string": "^1.5.0",
-    "next": "15.2.x",
+    "next": "^16.0.7",
     "next-pwa": "^5.6.0",
     "qrcode": "^1.5.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -30,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "4.1.x",
     "typescript": "5.8.x"
   }
